# bmr

./: .indent.pro  COPYRIGHT  LICENSE  README.md  meson.build  meson.options
.github/workflows/: ci.yml
buildroot/: Config.in  bmr.mk
src/: TODO  capability_cmd.c  capability_cmd.h  decoders.c  decoders.h  fault_cmd.c  fault_cmd.h  freq_cmd.c  freq_cmd.h  interleave_cmd.c  interleave_cmd.h  main.c  meson.build  mfr_addr_offset.c  mfr_addr_offset.h  mfr_fwdata.c  mfr_hrr.c  mfr_hrr.h  mfr_id.c  mfr_id.h  mfr_multipin.c  mfr_multipin.h  mfr_ramp_data.c  mfr_ramp_data.h  mfr_restart.c  mfr_save_restore.c  mfr_save_restore.h  mfr_snapshot.c  mfr_snapshot.h  mfr_status_data.c  mfr_status_data.h  mfr_user_data.c  onoff_cmd.c  operation_cmd.c  pgood_cmd.c  pgood_cmd.h  pmbus_io.c  pmbus_io.h  read_cmd.c  rw_cmd.c  (+18 more)
